    stops a bug which shows up in POSIX compliant mode.

2008-08-07 tdb
 * Added "page" to Session::get_url/URL::get_url
 * Added Plugin::icon_url and Screen::action_icon_url methods
 * Use ->icon_url and ->action_icon_url to get icon URLs, fixing #3354

2008-08-08 tdb
 * OAI now searches for the eprint in archive or deletion, fixing #3424
 * OAI GetRecord no longer errors on an invalid identifier, fixing #3423
 * get_object()/DataObj::new will no longer return eprints from any dataset

2008-08-11 tdb
 * Indexer should now stop if asked to stop while busy
 * Removed redundant indexer control code
 * Modified Status/Admin plugins to use Index::Daemon

2008-08-14 tdb
 * Generate new thumbnails in JPEG format

2008-08-15 tdb
 * Use an absolute URL for document icons (will complain under HTTPS)

2008-08-20 tdb
 * input_rows is specific to certain field types

2008-09-08 cjg
 * added srand to improve randomness of login cookies.

2008-09-10 cjg
 * Tweaked search so that a search with the only parameter being screen=
    still counts as not-filled-in rather than defaulting to action=search.
    Fixing #3431
 * Made change to Sword deposit to handle a change in the way CGI.pm > 3.15
    does post data. Fixing #3430
 * Fixed issue with view-by-name not making the actual names appear on the 
    menu page. This was due to it ending up looking up HASH(0x£@*&£$) in 
    the sizes hash.

2008-09-10 tdb
 * Thumbnails are now created as separate documents
 * Document conversions now add relations between converted documents
 * Removed "bucket" classes in the storage layer
 * XML revision files now belong to the History event, not the EPrint
 * Added relation API methods to DataObj for manipulating object relations
 * Added EPrints::Utils::make_relation method to generate a URI relation
    from a simple term
 * Added "files" field to EPrint (for accessing contained files)

2008-09-12 tdb
 * Force DBI::primary_key call to be in list context
